--- a/style.css
+++ b/style.css
@@ -7,6 +7,8 @@ body{
     background-color: var(--primary-color);
     padding: 70px;
     font-family: Righteous, sans-serif;
+    display: flex;
+    flex-direction: column;
 }
 header{
     display: flex;
@@ -18,5 +20,69 @@ header span{
     font-size: 32px;
 }
 .pokebola{
-    
+    height: 48px;
+    width: 48px;
+}
+main{
+    flex-grow: 1;
+    display: flex;
+    flex-direction: column;
+}
+h1{
+    flex-grow: 1;
+    color: floralwhite;
+    font-size: 300px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.container{
+    height: 154px;
+    display: flex;
+    justify-content: space-between;
+    padding-bottom: 64px;
+    align-items: flex-end;
+
+}
+.download{
+    width: 400px;
+    height: 100px;
+    display: flex;
+    justify-content: center;
+    background-color: var(--secundary-color);
+    align-items: center;
+    font-size: 48px;
+    color: aliceblue;
+}
+.descricao p{
+ color: var(--secundary-color);
+ font-size: 20px;
+ width: 500px;
+
+}
+.descricao h2{
+    font-size: 64px;
+    color: var(--secundary-color);
+}
+.sombra{
+    position: absolute;
+    font-size: 600px;
+    color: #ffffff55;
+    z-index: -999;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -80%);
+}
+.pikachu{
+    position: absolute;
+    width: 559px;
+    height: 541px;
+    z-index: -2px;
+    top: 60%;
+    left: 50%;
+    transform: translate(-50%, -80%);
+}
+footer{
+color: var(--secundary-color);
+text-align: center;
 }
