--- a/style.css
+++ b/style.css
@@ -66,7 +66,7 @@ h1{
 }
 .sombra{
     position: absolute;
-    font-size: 600px;
+    font-size: 26vw;
     color: #ffffff55;
     z-index: -999;
     top: 50%;
@@ -85,4 +85,34 @@ h1{
 footer{
 color: var(--secundary-color);
 text-align: center;
+}
+/* TABLET */
+@media (max-width: 768px){
+  body{
+    padding: 30px;
+   }
+   main{
+    justify-content: space-between;
+   }
+   .sombra {
+    transform: translate(-50%, -180%);
+   }
+   h1 {
+    align-items: flex-start;
+    transform: translateY(15%);
+    flex-grow: 0;
+    font-size: 200px;
+   }
+   .descricao p{
+    text-align: center;
+   }
+   .container{
+    flex-direction: column;
+    align-items: center;
+    height: auto;
+    padding: 0;
+   }
+   footer {
+     display: none;
+   }
 }
